[tool.poetry]
name = "clean-architecture-ddd"
version = "0.1.0"
description = ""
authors = ["edpyt <edrsa1321s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blacksheep = "^2.0.7"
uvicorn = "^0.27.1"
structlog = "^24.1.0"
dishka = "^0.5.0"
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
