[tool.poetry]
name = "clean-architecture-ddd"
version = "0.1.0"
description = ""
authors = ["edpyt <edrsa1321s@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
blacksheep = "^2.0.7"
uvicorn = "^0.27.1"
structlog = "^24.1.0"
pydantic = "^2.6.3"
asyncpg = "^0.29.0"
rodi = "^2.0.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
src = ["src"]
include = ["src/**.py", "tests/**.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
   "ARG",
   "ANN",
   "D",
   "EM101",
   "EM102",
   "PT001",
   "PT023",
   "SIM108",
   "SIM114",
   "TRY003",
   "PLW2901",
   "RET505",
   "PLR0913",
   "FA",
   "S101",
   "PLR2004",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
