[tool.poetry]
name = "clean-architecture-ddd"
version = "0.1.0"
description = ""
authors = ["edpyt <edrsa1321s@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
blacksheep = "^2.0.7"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"
rodi = "^2.0.6"
pyjwt = "^2.8.0"
structlog = "^24.1.0"
mediatr = "^1.3.2"
adaptix = "^3.0.0b3"
guardpost = "^1.0.2"

[tool.poetry.group.db.dependencies]
clickhouse-sqlalchemy = "^0.3.1"
alembic = "^1.13.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
testcontainers = "^4.3.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["tests"]

[tool.ruff]
line-length = 99
src = ["src"]
include = ["src/**.py", "tests/**.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
   "ARG",
   "ANN",
   "D",
   "EM101",
   "EM102",
   "PT001",
   "PT023",
   "SIM108",
   "SIM114",
   "TRY003",
   "PLW2901",
   "RET505",
   "PLR0913",
   "FA",
   "S101",
   "PLR2004",
   "TCH001",
   "PGH003",
   "TD001",
   "TD002",
   "TD003",
   "FIX001",
   "FIX002",
   "TCH002"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
   "S106"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
